--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-*.class
-*.log
+project/target
+project/project/target
+target
+tmp
+.history
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/.settings
